# co-work_connect

./: PERMISSIONS_MATRIX.md  README.md  USER_CREATION_GUIDE.md  db.sqlite3  env.example  main.py  manage.py  pyproject.toml
core_app/: admin.py  apps.py  forms.py  models.py.new  permissions.py  signals.py  urls.py  views.py
core_app/management/: __init__.py
core_app/management/commands/: __init__.py  create_user.py
core_app/migrations/: 0001_initial.py
core_app/templates/core_app/: base.html  dashboard.html  home.html  profile.html
core_app/templates/core_app/auth/: login.html  register.html
core_app/templates/core_app/bookings/: form.html  list.html
core_app/templates/core_app/leases/: form.html
core_app/templates/core_app/profile/: edit.html  view.html
core_app/templates/core_app/resources/: detail.html  form.html  list.html
core_app/templates/core_app/subscriptions/: form.html
core_app/templates/core_app/users/: list.html
main_app/: settings.py  urls.py
reference/: permissions_matrix_colored.xlsx
